@@ -1,3 +1,8 @@
+* Tue Aug 20 2019 Robert Vincent <pillarsdotnet@gmail.com> - 1.0.5-0
+- Remove Puppet 4.x support.
+- Add Puppet 6.x support.
+- Add Stdlib 6.x support.
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.4-0
 - Update the upper bound of stdlib to < 6.0.0
 - Update a URL in the README.md
